# docker-web-scraping

./: Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yaml
scripts/: __init__.py  build_docker_image.py  push_dockerhub.py  run_docker_container.py
