[project]
name = "docker-web-scraping"
docker_user = "gabrielbdornas"
version = "1.0.3"
description = "Docker image to python web scraping processes."
authors = ["Gabriel Dornas <gabrielbdornas@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.taskipy.variables]
version = "1.0.3"

[tool.taskipy.tasks]
image = { cmd = "python scripts/build_docker_image.py", help = "Build Docker image." }
container = { cmd = "python scripts/run_docker_container.py", help = "Start Docker container." }
